# mirage

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  imgui.ini  pyproject.toml
core/: CMakeLists.txt
core/include/mirage/: lint.hpp  mesh.hpp  program.hpp  raytrace.hpp  select.hpp
core/src/: bindings.cpp  lint.cpp  main.cpp  mesh.cpp  program.cpp  raytrace.cpp  render_main.cpp  select.cpp
core/viewer/: viewer.cpp
docs/: architecture.md  claude-desktop.md  design.md  scene-scaling.md
docs/gallery/: 1_screw_spring.json  2_selectors.json  3_profile_vase.json  4_boolean_bore.json  render_airplane_anim.py  render_gallery.py  render_viewer_build.py
examples/: airplane.json  airplane.py  falling_box.py  launch_native_viewer.py
examples/cases/: 01_modeling_render.py  02_collision_stack.py  03_pendulum_joints.py  04_robot_arm.py  05_synthetic_data.py  06_franka_panda.py  07_web_viewport.py  08_spatial_relations.py  09_parametric_modeling.py  10_studio_render.py  11_modeling_kernel.py  12_meshlang.py  13_goblet.py  14_repair.py  15_shared_oplog.py  16_hard_surface.py  17_city_scene.py  18_interior_scene.py  19_parametric_tower.py  20_diff_merge.py  21_self_refine.py  22_parametric_temple.py  23_terrain.py  24_grand_interior.py  25_eames_lounge.py  26_forecourt.py  README.md  _util.py
examples/oplogs/: README.md  desk.json
skills/mirage/: SKILL.md
src/mirage/: __init__.py  backends.py  capture.py  engine.py  gltf_export.py  gltf_import.py  grounding.py  imaging.py  kernel.py  mcp_server.py  meshlang.py  modeling.py  mujoco_backend.py  oplog_diff.py  photomatch.py  photoscene.py  relations.py  repair.py  scene.py  session.py  solve.py  synthetic.py  textures.py  viewport.py
tests/: test_cpp_core.py  test_cpp_program.py  test_gltf_export.py  test_gltf_import.py  test_kernel.py  test_lines.py  test_mcp_server.py  test_meshlang.py  test_modeling.py  test_mujoco_backend.py  test_oplog_diff.py  test_photomatch.py  test_photoscene.py  test_relations.py  test_repair.py  test_scene.py  test_self_refine.py  test_session.py  test_solve.py  test_synthetic.py  test_textures.py  test_viewer_orbit.py  test_viewport.py
