[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirage"  # NOTE: verify availability on PyPI before publishing (fallback: "mirage-sim")
version = "0.0.1"
description = "An AI-native 3D renderer + lightweight physics simulator, driven by coding agents (MCP)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "saofund" }]
keywords = ["3d", "rendering", "simulation", "robotics", "mcp", "ai", "claude", "synthetic-data"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
usd = ["usd-core>=24.0"]
mujoco = ["mujoco>=3.0"]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=7"]
demos = ["imageio>=2.30", "pillow>=10", "matplotlib>=3.7", "robot_descriptions>=1.9"]
model = ["trimesh>=4.0", "manifold3d>=2.3"]
all = ["mirage[usd,mujoco,mcp,model]"]

[project.scripts]
mirage-mcp = "mirage.mcp_server:main"

[project.urls]
Homepage = "https://github.com/saofund/mirage"
Source = "https://github.com/saofund/mirage"

[tool.hatch.build.targets.wheel]
packages = ["src/mirage"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pybind11>=3.0.4",
]
